<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_my_pets"
        android:title="@string/label_my_pets"
        android:icon="@drawable/ic_baseline_petout"
        app:showAsAction="always"/>
    <item android:id="@+id/menu_search"
        android:title="@string/label_search"
        android:icon="@drawable/ic_baseline_search"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_favorite"
        android:title="@string/label_favorites"
        android:icon="@drawable/ic_baseline_favorite"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_profile"
        android:title="@string/label_profile"
        android:icon="@drawable/ic_baseline_person"
        app:showAsAction="ifRoom"/>
</menu>