<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_degra"
    tools:context=".Steps.InicioAppActivity">

    <TextView
        android:id="@+id/paseosApp"
        android:layout_width="325dp"
        android:layout_height="61dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/boton_redondo"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/paseosApp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.182" />

    <TextView
        android:id="@+id/guarderiaAPP"
        android:layout_width="325dp"
        android:layout_height="61dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="380dp"
        android:background="@drawable/boton_redondo"
        android:gravity="center"
        android:text="@string/guarderiaApp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Servicios"
        android:layout_width="327dp"
        android:layout_height="76dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="636dp"
        android:background="@drawable/boton_redondo"
        android:gravity="center"
        android:text="@string/InicioServicios"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="325dp"
        android:layout_height="144dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="384dp"
        android:text="@string/txtpaseosApp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="325dp"
        android:layout_height="176dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="88dp"
        android:text="@string/txtguarderiaApp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>