<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_degra"
    android:clickable="true"
    android:focusable="true"
    android:padding="16dp"
    tools:context=".Steps.RegistroMascotaActivity">

    <EditText
        android:id="@+id/nombreMascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/boton_blanco"
        android:ems="10"
        android:hint="@string/NombreMascota"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnfoto" />

    <EditText
        android:id="@+id/nacimientoMascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/boton_blanco"
        android:ems="10"
        android:hint="@string/NacimientoMascota"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/razaMascota" />

    <EditText
        android:id="@+id/generoMascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/boton_blanco"
        android:ems="10"
        android:hint="@string/GeneroMascota"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nacimientoMascota" />

    <EditText
        android:id="@+id/TamañoMascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/boton_blanco"
        android:ems="10"
        android:hint="@string/TamañoMascota"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generoMascota" />

    <EditText
        android:id="@+id/DescripcionMascota"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/boton_blanco"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/DescripciónMascota"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TamañoMascota" />

    <EditText
        android:id="@+id/razaMascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/boton_blanco"
        android:ems="10"
        android:hint="@string/RazaMascota"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreMascota" />

    <Button
        android:id="@+id/btnContinuarMascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/boton_redondo"
        android:clickable="true"
        android:shadowColor="#673AB7"
        android:text="@string/botonContinuarMascota"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DescripcionMascota"
        app:rippleColor="#673AB7"
        app:strokeColor="#673AB7" />

    <ImageButton
        android:id="@+id/btnfoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_degra"
        android:src="@drawable/camara"
        app:layout_constraintBottom_toTopOf="@+id/nombreMascota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
   />


</androidx.constraintlayout.widget.ConstraintLayout>