<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PetOutFragment"
    android:background="@drawable/background_degra">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewpaseo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/perro"
        app:layout_constraintEnd_toStartOf="@+id/paseosApp"
        app:layout_constraintTop_toBottomOf="@+id/Servicios" />

    <TextView
        android:id="@+id/paseosApp"
        android:layout_width="200dp"
        android:layout_height="61dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/poppins_family"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/paseosApp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewpaseo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Servicios" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgViewguarderia"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/cuidado"
        app:layout_constraintEnd_toStartOf="@+id/guarderiaAPP"
        app:layout_constraintTop_toBottomOf="@+id/texvpaseos" />

    <TextView
        android:id="@+id/guarderiaAPP"
        android:layout_width="200dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/poppins_family"
        android:gravity="center_horizontal|center_vertical"
        android:singleLine="true"
        android:text="@string/guarderiaApp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="@+id/imgViewguarderia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgViewguarderia"
        app:layout_constraintVertical_bias="0.571" />

    <TextView
        android:id="@+id/Servicios"
        android:layout_width="327dp"
        android:layout_height="76dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/poppins_family"
        android:gravity="center"
        android:text="@string/InicioServicios"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/texvpaseos"
        android:layout_width="300dp"
        android:layout_height="144dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/txtpaseosApp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paseosApp" />

    <TextView
        android:id="@+id/texvguarderia"
        android:layout_width="325dp"
        android:layout_height="176dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/txtguarderiaApp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guarderiaAPP" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/flotingtbtn2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:elevation="4dp"
        android:src="@drawable/ic_baseline_whatsapp"
        android:tint="@color/black"
        app:backgroundTint="@color/smock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texvguarderia" />

</androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>